--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server/bin/www",
-    "dev": "DEBUG=project_pila:server && babelwatch./server/bin/www"
+    "start":  "PORT=3000 APP_URL='http://localhost' DEBUG=projnotes node ./server/bin/www",
+    "dev": "DEBUG=project_pila:server && babel-watch ./server/bin/www",
+    "b:s": "npm run cleans && babel ./server --out-dir dist --copy-files", 
+    "devc" : "NODE_ENV=development webpack serve --config ./webpack.dev.config.js --mode development",
+    "cleans": "rm -rf ./dist",
+    "cleanc": "rm -f ./public/bundle.js",
+    "b:c": "npm run cleanc && webpack --config ./webpack.config.js --mode production",
+    "build": "npm run clean && babel ./server --out-dir dist --copy-files"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
